// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuIcon should accept custom icons 1`] = `
<WithStyles(MenuIcon) OpenIcon={[Function: ShouldUpdate]} CloseIcon={[Function: ShouldUpdate]}>
  <MenuIcon OpenIcon={[Function: ShouldUpdate]} CloseIcon={[Function: ShouldUpdate]} classes={{...}} open={false} label={true}>
    <div className="RSFMenuIcon-root-1">
      <TransitionGroup component="div" childFactory={[Function: childFactory]}>
        <div>
          <CSSTransition classNames="rsf-menu-icon" timeout={300} onExited={[Function: bound bound handleExited]} in={true} appear={[undefined]} enter={[undefined]} exit={[undefined]}>
            <Transition timeout={300} onExited={[Function]} in={true} appear={false} enter={true} exit={true} onEnter={[Function]} onEntered={[Function]} onEntering={[Function]} onExit={[Function]} onExiting={[Function]} mountOnEnter={false} unmountOnExit={false}>
              <WithStyles(SvgIcon) className="RSFMenuIcon-icon-2">
                <SvgIcon className="RSFMenuIcon-icon-2" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                  <svg className="MuiSvgIcon-root-3 RSFMenuIcon-icon-2" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                    <pure(AddIcon)>
                      <AddIcon>
                        <WithStyles(SvgIcon)>
                          <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                            <svg className="MuiSvgIcon-root-3" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                              <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
                              <path fill="none" d="M0 0h24v24H0z" />
                            </svg>
                          </SvgIcon>
                        </WithStyles(SvgIcon)>
                      </AddIcon>
                    </pure(AddIcon)>
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </Transition>
          </CSSTransition>
        </div>
      </TransitionGroup>
    </div>
  </MenuIcon>
</WithStyles(MenuIcon)>
`;

exports[`MenuIcon should show the close icon when opened 1`] = `
<WithStyles(MenuIcon) open={true}>
  <MenuIcon open={true} classes={{...}} label={true} CloseIcon={[Function: ShouldUpdate]}>
    <div className="RSFMenuIcon-root-1">
      <TransitionGroup component="div" childFactory={[Function: childFactory]}>
        <div>
          <CSSTransition classNames="rsf-menu-icon" timeout={300} onExited={[Function: bound bound handleExited]} in={true} appear={[undefined]} enter={[undefined]} exit={[undefined]}>
            <Transition timeout={300} onExited={[Function]} in={true} appear={false} enter={true} exit={true} onEnter={[Function]} onEntered={[Function]} onEntering={[Function]} onExit={[Function]} onExiting={[Function]} mountOnEnter={false} unmountOnExit={false}>
              <WithStyles(SvgIcon) className="RSFMenuIcon-icon-2">
                <SvgIcon className="RSFMenuIcon-icon-2" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                  <svg className="MuiSvgIcon-root-3 RSFMenuIcon-icon-2" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                    <pure(CloseIcon)>
                      <CloseIcon>
                        <WithStyles(SvgIcon)>
                          <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                            <svg className="MuiSvgIcon-root-3" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                              <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                              <path fill="none" d="M0 0h24v24H0z" />
                            </svg>
                          </SvgIcon>
                        </WithStyles(SvgIcon)>
                      </CloseIcon>
                    </pure(CloseIcon)>
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </Transition>
          </CSSTransition>
        </div>
      </TransitionGroup>
    </div>
  </MenuIcon>
</WithStyles(MenuIcon)>
`;

exports[`MenuIcon should show the open icon when closed 1`] = `
<WithStyles(MenuIcon)>
  <MenuIcon classes={{...}} open={false} label={true} CloseIcon={[Function: ShouldUpdate]}>
    <div className="RSFMenuIcon-root-1">
      <TransitionGroup component="div" childFactory={[Function: childFactory]}>
        <div>
          <CSSTransition classNames="rsf-menu-icon" timeout={300} onExited={[Function: bound bound handleExited]} in={true} appear={[undefined]} enter={[undefined]} exit={[undefined]}>
            <Transition timeout={300} onExited={[Function]} in={true} appear={false} enter={true} exit={true} onEnter={[Function]} onEntered={[Function]} onEntering={[Function]} onExit={[Function]} onExiting={[Function]} mountOnEnter={false} unmountOnExit={false}>
              <WithStyles(SvgIcon) className="RSFMenuIcon-icon-2">
                <SvgIcon className="RSFMenuIcon-icon-2" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                  <svg className="MuiSvgIcon-root-3 RSFMenuIcon-icon-2" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                    <test-file-stub />
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </Transition>
          </CSSTransition>
        </div>
      </TransitionGroup>
    </div>
  </MenuIcon>
</WithStyles(MenuIcon)>
`;
